{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 60,
  "lineage": "22a5f1c9-4df6-9229-ad8e-e8689add5a3b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "demo_elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:105239478464:loadbalancer/smelter-demo-elb",
            "availability_zones": [
              "us-east-1a"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 400,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "smelter-demo-elb-2044539707.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:3000/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "smelter-demo-elb",
            "idle_timeout": 400,
            "instances": [
              "i-078dda2931003c82d"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 8000,
                "instance_protocol": "http",
                "lb_port": 443,
                "lb_protocol": "https",
                "ssl_certificate_id": "arn:aws:acm:us-east-1:105239478464:certificate/8e68591f-e332-46cd-a5e8-495b95f7155c"
              },
              {
                "instance_port": 8000,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "smelter-demo-elb",
            "security_groups": [
              "sg-0ae8fa0c224043820"
            ],
            "source_security_group": "105239478464/demo_elb_sg",
            "source_security_group_id": "sg-0ae8fa0c224043820",
            "subnets": [
              "subnet-03aa4b6ee6a8efe7b"
            ],
            "tags": {
              "project": "smelter-demo"
            },
            "tags_all": {
              "project": "smelter-demo"
            },
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_instance.demo_instance",
            "aws_security_group.demo_elb_sg",
            "aws_security_group.demo_sg",
            "aws_subnet.demo_public_subnet",
            "aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "demo_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-035a9148608f7ba1b",
            "arn": "arn:aws:ec2:us-east-1:105239478464:instance/i-078dda2931003c82d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-078dda2931003c82d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "g4dn.xlarge",
            "ipv6_address_count": 0,
            "key_name": "wojtek-compositor-demo",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-054755fbf2f31b067",
            "private_dns": "ip-10-0-1-189.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.189",
            "public_dns": "ec2-54-227-232-190.compute-1.amazonaws.com",
            "public_ip": "54.227.232.190",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-07e859c4191ed9d17",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03aa4b6ee6a8efe7b",
            "tags": {
              "project": "smelter-demo"
            },
            "tags_all": {
              "project": "smelter-demo"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06b7b4161f4c6c802"
            ]
          },
          "dependencies": [
            "aws_security_group.demo_elb_sg",
            "aws_security_group.demo_sg",
            "aws_subnet.demo_public_subnet",
            "aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "demo_ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:105239478464:internet-gateway/igw-0ce737201a4ab293c",
            "id": "igw-0ce737201a4ab293c",
            "owner_id": "105239478464",
            "tags": {
              "project": "smelter-demo"
            },
            "tags_all": {
              "project": "smelter-demo"
            },
            "vpc_id": "vpc-0dfd5396f8b491a57"
          },
          "dependencies": [
            "aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "demo_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:105239478464:route-table/rtb-08446a2d133fd7686",
            "id": "rtb-08446a2d133fd7686",
            "owner_id": "105239478464",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ce737201a4ab293c",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ce737201a4ab293c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "project": "smelter-demo"
            },
            "tags_all": {
              "project": "smelter-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dfd5396f8b491a57"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.demo_ig",
            "aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "demo_public_rt_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c732891a44e54762",
            "route_table_id": "rtb-08446a2d133fd7686",
            "subnet_id": "subnet-03aa4b6ee6a8efe7b"
          },
          "dependencies": [
            "aws_internet_gateway.demo_ig",
            "aws_route_table.demo_public_rt",
            "aws_subnet.demo_public_subnet",
            "aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demo_elb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:105239478464:security-group/sg-0ae8fa0c224043820",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ae8fa0c224043820",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "demo_elb_sg",
            "name_prefix": "",
            "owner_id": "105239478464",
            "revoke_rules_on_delete": false,
            "tags": {
              "project": "smelter-demo"
            },
            "tags_all": {
              "project": "smelter-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dfd5396f8b491a57"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demo_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:105239478464:security-group/sg-06b7b4161f4c6c802",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06b7b4161f4c6c802",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ae8fa0c224043820"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "demo_sg",
            "name_prefix": "",
            "owner_id": "105239478464",
            "revoke_rules_on_delete": false,
            "tags": {
              "project": "smelter-demo"
            },
            "tags_all": {
              "project": "smelter-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dfd5396f8b491a57"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.demo_elb_sg",
            "aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:105239478464:subnet/subnet-03aa4b6ee6a8efe7b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03aa4b6ee6a8efe7b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "105239478464",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "project": "smelter-demo"
            },
            "tags_all": {
              "project": "smelter-demo"
            },
            "vpc_id": "vpc-0dfd5396f8b491a57"
          },
          "dependencies": [
            "aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "demo_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:105239478464:vpc/vpc-0dfd5396f8b491a57",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-048537eff15473c5d",
            "default_route_table_id": "rtb-0ea3d6299216444d5",
            "default_security_group_id": "sg-003a64a422fcb38a2",
            "dhcp_options_id": "dopt-0a1d2ea191406bc27",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0dfd5396f8b491a57",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ea3d6299216444d5",
            "owner_id": "105239478464",
            "tags": {
              "project": "smelter-demo"
            },
            "tags_all": {
              "project": "smelter-demo"
            }
          }
        }
      ]
    }
  ]
}